Updating Dockerfile