@@ -1,6 +1,32 @@
-FROM openjdk:17-alpine
-RUN mkdir -p /opt/goldengit
-COPY target/goldengit-1.0.jar /opt/goldengit/
-WORKDIR /opt/goldengit
+# base image to build a JRE
+FROM amazoncorretto:17.0.3-alpine as corretto-jdk
+
+# required for strip-debug to work
+RUN apk add --no-cache binutils
+
+# Build small JRE image
+RUN $JAVA_HOME/bin/jlink \
+         --verbose \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /customjre
+
+# main app image
+FROM alpine:latest
+ENV JAVA_HOME=/jre
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+# copy JRE from the base image
+COPY --from=corretto-jdk /customjre $JAVA_HOME
+
+# Configure working directory
+RUN mkdir /app
+
+COPY target/goldengit-1.0.jar /app/goldengit-1.0.jar
+WORKDIR /app
+
 EXPOSE 8080
-CMD ["java", "-jar", "goldengit-1.0.jar"]
+CMD [ "/jre/bin/java", "-jar", "goldengit-1.0.jar" ]
